<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34sp"
        android:layout_marginTop="28sp"
        android:textAlignment="textStart"
        android:text=" Would you like decaf?"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <CheckBox
        android:id="@+id/decafCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:text="Decaf" />

</LinearLayout>